# WES_ML_ESP

./: CMakeLists.txt
components/digit_inference/: CMakeLists.txt  Kconfig.projbuild  digit_inference.cc  digit_inference.h  digit_preprocess.c  idf_component.yml
components/digit_inference/cmake/: tflite_to_c_array.cmake
components/digit_inference/generated_static/: digit_test_images_data.c  digit_test_images_data.h  mnist_tiny_model_data.c  mnist_tiny_model_data.h
components/digit_inference/include/: digit_inference.h
main/: CMakeLists.txt  main.c
models/: mnist_tiny_int8.tflite
scripts/: extract_preproc_from_monitor_log.py  pngs_to_c_arrays.py  tflite_to_c_array.py
